# routes/dashboard.js
@@ -9,5 +9,7 @@ module.exports = function (app) {
   app.get("/stamp", dashboard.stamp);
   app.get("/autoupdate",dashboard.autoupdate)
   app.get("/countEmployees",dashboard.countEmployees)
-
+  app.get("/exportdate/:date",dashboard.exportdate)
+  app.get("/monthReport/",dashboard.monthReport)
+  
 };
